# ChangeLog for x11-base/xorg-drivers
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.128 2015/02/24 08:37:41 ago Exp $

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for alpha, wrt bug #530652

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for sparc, wrt bug #530652

  22 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for ia64, wrt bug #530652

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for ppc64, wrt bug #530652

  20 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for ppc, wrt bug #530652

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for x86, wrt bug #530652

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
  Stable for amd64, wrt bug #530652

*xorg-drivers-1.17 (08 Feb 2015)

  08 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-drivers-1.17.ebuild:
  Version bump.

  04 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-drivers-1.16.ebuild:
  Add libinput flag and dependency

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.15.ebuild:
  Stable for arm, wrt bug #500368

*xorg-drivers-1.16 (27 May 2014)

  27 May 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-drivers-1.16.ebuild:
  Version bump.

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.15.ebuild:
  Stable for sparc, wrt bug #500368

  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.15.ebuild:
  Stable for alpha, wrt bug #500368

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.15.ebuild:
  Stable for ia64, wrt bug #500368

  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.15.ebuild:
  Stable for ppc64, wrt bug #500368
