@@ -8,24 +8,24 @@ EBUILD xorg-drivers-1.13.ebuild 6132 SHA256 58ebbf0b3dfe9e395d18b20e7feb284d2e41
 EBUILD xorg-drivers-1.14.ebuild 6061 SHA256 3c2885b67bd613d1dd34d57df052a8a807124b93ac1d3899c7c03237533f7c6e SHA512 635ebc8f041054f439d4d846e89a1e6e031f4a20558ead3fbbbc2b04d91b80b9c18d06b463e4e638e0fd748c36f2b5dc9cda8470d82485ad8888e60a945fba63 WHIRLPOOL 9dc0c5af36737fd84dfd3efb8de0d922676d299dda983755b7b4cfae4ae0bc475b26c02f92bde3d5a024def9f55a37fb0f03ea0a8f590965e9a0817033e84c41
 EBUILD xorg-drivers-1.15.ebuild 6149 SHA256 29f0279abee28459fdc4187c2d2f26cb7354ded2cab4a5b14ba628aa294860e5 SHA512 f40b332994acb54b0c2461398840d8def55faff2ffc76d7921ab103c775c607ad2d18472adf25b8976763c23d5eb7607eca8963adea5e524046c45be863a7642 WHIRLPOOL f40bccd134b31f2ae88dcff741a60e8e28c506b4ffe484deafbc8f593809a83db24e472029bf893513d38ae669eae4abce808d354fd65c42fa5d66bc79a51ff4
 EBUILD xorg-drivers-1.16.ebuild 6276 SHA256 e5813e805450958de462c2100a4a6a8011b52fe7aece7294b0b630f082eda79f SHA512 34acbddad1162bbaf93b9b79a2714a3620fa5fc6f5f25bdf705a8f7d8cb54330a6c0a40757b2ca9805e8978cbfa868ab314f5b14b3c510db1effc1735300429b WHIRLPOOL 62225c24a05d42e64fd130efbdd016b808f17a590d98d4676559b2066454ecce71f7a9eaa8e3bfdc4db394b72e1cf4ed98ebb5db19e6801ce000be4c6d067a40
-EBUILD xorg-drivers-1.17.ebuild 6241 SHA256 22ac11a1031e8ef54be135213d060b14780bf829b9a5f4ff93088aeafdc95fcd SHA512 5f7bdd905442d1b8c4e8b7688c55367fff3837b426192ab6a8cc9607c8f6a707eae2c0a0ebd4e24424bd572effed53dda4f478c387eef733fc027231233a68ba WHIRLPOOL 6ed8db2273bc5ec7bf302ff1e6d0868ca76bbe815c9dd3f9e89c0fe0104b07654f219ed60cee60dd3e9affbc675f984301ee2302b675dcecaec856d7d3b54936
+EBUILD xorg-drivers-1.17.ebuild 6244 SHA256 76b54d1b2e044c87143a199c9baf183ed804f6c39c519db7cf0f5eb72741d22b SHA512 99fd9b55fcd5eb22d8233a57d0882809df57c26c3683063076ae744e5900495fb584356b97ac336ed2c6ae00e9c37bde97bbd6a6f4475803688c7bf6f182b740 WHIRLPOOL ce4a001cb0f2ec7c8108dd2b4fffe4485961f93f86b2a3b19baa481453bf3fa2926396c3a996e470e69bf0b3d4ade0b247ce23d7070d4e826ad10b2eae80b71a
 EBUILD xorg-drivers-1.9.ebuild 5735 SHA256 b546a6815826a31d0c794bbc3413321cd79b662f29868543703adf3d9170aa0c SHA512 1cbfec3f30735ae752692b58816e8b0a50c6f170e7acda2f10c958d977d6d7b3785ccaaa97af0dbd72a2281e1b93f44f9aadbf5050669c25afa3fcdb266664e9 WHIRLPOOL 9921387c13a1804f8ab274300e1c39b908ce03264dc45b0a7b831cad231a334d5259467d40624defac6de54d72c694ef76af8bc7f93242a0383290145896e16f
-MISC ChangeLog 16384 SHA256 3d216058ff11cd95fefbdd30eb6a27ef2645f59deaa43b55a7175e9438d14146 SHA512 f81cbe09da4596e32e481e86ff5b060ea3b6268db696e0d18f854ce8dda60aff49d86b3d18348bf6bf54200abf11ef43b81edf5d9edc839fa580e057ce38abf6 WHIRLPOOL f3b77d9858b16c49177486d78bcbf1e89af1af4de6bbb0584065c0fc8902c00b878668998bd759458c3505416a7ee44024d2386fe6c5bb2fa9c1db8a013cd300
+MISC ChangeLog 16496 SHA256 66f0bc19b53fb20dfdf332ca9d975a57dbf8e3f5585ca4d41a2cccbd9a3d4ce1 SHA512 23c1e3e69b6333e0d6634867b8ba9fe2b505fff4d2d664cf70c6b4ab8b0e1f494e173505ebadf93cdd47c0f4dda62f7fa8f002f47397762a2f653d07ddd29549 WHIRLPOOL 9210ce06ea9dfcdcbd4e0cc05380a4a988714debaf8462444e97247e7284fba3df5bc7c95764375bb66443f1df39ea35095e441366b8157dac42bb01faa1ace9
 MISC metadata.xml 157 SHA256 bc6a4a3d5e32f9329039b242036828256c9f2c33862bc1d606d4ac8427032fdc SHA512 e30223e19870c9ee1cb96dbff14df3b5287e3d21a415f52723ef2f9d4968cc4ad865b76b0078e84aa03f8933d4930f36455dbf62c372bbc17be8bdf6d7410bf7 WHIRLPOOL a22bf55ae1b68446b851f6b2bdf9cc6bb8244acc787aaabb472cde13e36e64293741b80c52569f1e59e4fb4962f6f738eca8be09bddf732c2454f9ab07ac11d4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU7DhWAAoJELp701BxlEWfMJ0QAIDgZEv2mNnqv/CVkvvJoQ9Z
-U0u3rPLrfzKPQSmisrZ3RMu9DHvSthsGk4NK2RwOEOBWOIJUIfS8fqOBOu8x3twh
-3928rtFLg0dBGVJ082WYsf17rfmF1aGjhnNWIkaWQ5dcR6YjNZ3Es5V7gOwVUBIp
-xqsETGz5zHX9M7+FCGJwaTnk0mV9I+laxCeuy8Wzvh9HL+j/9pg/VSx0/KPnk+MN
-DfV8389Bmm1EW3OToXxdq9p6lFbv9x8P2GlEUJD6oShHglG29I5wJ5P9Z9bjIvMX
-e7o0kivalYNVgQjCvmkTQ+GLpQanQ+jl4onbKqqVgR5eL0bQDf2wgPFpsOobWx2+
-0v1c0xaNWJreF9/I7jQZ0ebaI/5dtHHTmSJu0THl5lyeL+ClcEavuO0d0DGx4Otg
-UPLzjK60Z6Ysa9W/f+7FuEml8u4s0VLn36s0NbA/hlLmKnIrjvQ2B8rX+bSnuOUN
-MS2nZv+s+J59Flre/9n8oz6GD6NjBnRyjGMZSs9rqWSa4AaMFJKK7jx/45KM6suI
-6QtpLLGhn5ck4itYbbqKREPnlc8SDy2earqAGvspu7kEpcKiv4iiBWG1Mof0QLW3
-JKpAP+Bw92xKxz/ROfiC7M+6IxH7nnPiRRW6M+r6iP62PMDyjwgqd+8tONfHbbvc
-Nf0iaY+qMlropAGeTIH3
-=lp0m
+iQIcBAEBCAAGBQJU9SKWAAoJEJIMDbyqvv1VfuAQAI0WvPHWgvEUsqVHR9SrPkdU
+kCxO0dO8UY1vdfV/QGfDJTw/kEWtGTCZgKS+rrJFfSk8pehoNr5SbObpaAGau1PC
+FZZ4B1xxWARxOMAAxe4urWyB+MbUUfbKe1oqH0BBnVFpn/oC7dyZiM5vxNYAXsMo
+0Yzh49h+3C8v6OXop7DelDzIsOtoUW9w3rWT5YpTKPubBhD38C+bUWMUI3VDFkNp
+r/DKhvVBwbJaNNG3KlaJ+YJmAw6gYslsyeUO8xlOaBr1qhynsYOlnd9MqWOkhRQZ
+rPsbgvPCJA9BCr9ZmRd9rCMeQHhtxUGDiSOjFOirdRDunU0Hl3Wmt/BSlEPEjCQu
+KkBL9yjRqE/fK4RQYDdSaMSNH62LnSDRXls3PjPfD58SdkTszlPxDIwWCO8X4coR
+bUOrKDuM0djZJ9m3WwEMNxfP4XDpuO6BOlhUW3pALJSKv5X9Ys30AAXjuPCRoIW1
+DkdbFUN7+BxDptZLLf3Cy84hpu2ITYV3NAMrx07Vxg2I7JqjjnwRpEgqm+2cqde9
+YA5xoQu8ohXnQSa7n/Xaab4yVPXlGDTtjRalnaX2lrXPOdJ0z4MoHcXMYYIbUMU4
+a0cIxLPhu/15obDziQ7HoZSqboOcK+sWpKawcvtdRUfsmKKsNA2Qc/lcNRh1yYv2
+0vBfFt0MiLxqgwdPeyi1
+=fc70
 -----END PGP SIGNATURE-----
