@@ -35,26 +35,24 @@ EBUILD xorg-server-1.16.4-r2.ebuild 6148 SHA256 35b4e32fd257e19560a7abbba838b1d0
 EBUILD xorg-server-1.16.4.ebuild 6929 SHA256 8c9801a0e99ac890428fe271bdb60437077b887395adc5c7d830b27652210d3e SHA512 3a353b773a5e253eb73b508de9b5cf3be50e8cb5f38bbe385a30ca25081c784f364b8cc2b82d122080a121d8eaea0db13de5244f46e6e7868a7f8294f38111a0 WHIRLPOOL 61962a4f062b75017d25b3348df69c2025c85f5ccba0148fb934e943f2056a2f23a8c0e8a49c4811082f68250e846ed23d64cab2f0b2c1b3f02849acc9bd39f0
 EBUILD xorg-server-1.17.0.ebuild 6157 SHA256 ebac647c8a4db55555ddc23f463a4b466c54de56c4b6e7531925e065fb83385a SHA512 857a499fddfba5101647f30b353b0a8e95ee8d0229a975d386ec5ce0b6af346fbb322e43650b9cf2a76ebc0bfc267c55d7224ca9337462eb3aa446bb329f6ad8 WHIRLPOOL 8e281cdf98b16324ab4190eb8eb3d3e1eaa1569ff1f260bf8ad0526edb3b7ef95da209075cdf9bbef49d2d2734306138065c43ca19b46a52b39330cfcdb9f156
 EBUILD xorg-server-1.17.1-r1.ebuild 6399 SHA256 12e7f6a06837668a796cffa9a49b713c8f62ab0f44e0573f8f9dcf8bb70e2f7e SHA512 5d8ada54b4cefff3ea403e23171c794021838f3c3f2f46ddd6994bce1fedbcf0bc254e412fbd47499ee87192e4841a19e24f35f4d5e2e17c0455e948c81a4326 WHIRLPOOL de8c82471a47fa14faf292a08e4d99bcfa410d8984f0ff40deec3d41fb507b76d34f77c5f08ea5b8311af8b9936ce0f08d4662e5b26323ef5422e29dc48d259d
-EBUILD xorg-server-1.17.1.ebuild 6288 SHA256 bbe3af2bbd61edaa0e21cc9afd7b234bfac98c803df92a3b732dfcf2aeee6704 SHA512 91a8d561cd5ce0557eda5cf64c93a9a618bf7da03c52bd84d8363e75f49a0ce662b8a3f471c2645eac348c1b63aa80dcfd2820acf656afa9f01ef3bb4fbffdf9 WHIRLPOOL 1cef3716b64419f8a59149a40aa3830dbee6427661723c036c06f7d7494a5396590b02c3854ff50dce6a361fad11ba64ede9bc546b955c0c7cbf5ca44c5c3968
-MISC ChangeLog 64864 SHA256 3b9a5521b10c31cbd8164b50d7b1e8a4269e667b8fd03a39f6c64f26b626af9a SHA512 c58b2edd16f34106e49f5b0aca5455bcb3295602152cbfffbbc9ad26439ff55c49ef7408361e3893fdb87154c093cb77248c3452a16f1d95961ab908c8a927c2 WHIRLPOOL b8d4a0a87058b47cfcc73a5d360a8b278a280d201fa32e46396b814b51d2161ba551dec7d97dfe6944a58ea8a91bfbefffaa7517e3f0fa96441434d19d1b5f41
+EBUILD xorg-server-1.17.1.ebuild 6291 SHA256 1c3506cab3fdd6fd145758dd3d03aa4e7fae11c99789e6eb770700e62c73eb54 SHA512 f962a2a07095205422a3e26eb9547d495a63e88876bff51ca8ef9401cb2fb67835dff79b8e47fd30c011a7b9c395afdb1aa35743fae505d95b06dc0559a37213 WHIRLPOOL b157b7c16166d9de523cea526d3917d72802e771ee40cf68e9632b992fa49c101d5ea945c81e0e14034e11b3de11b353b7ced17cedf394d9109929e5ad847436
+MISC ChangeLog 64974 SHA256 a0564ddbc6f1d67eafc4660f67d4eee5e9fb36cb3425e718449d3a97c6e02e60 SHA512 4f144bf436f48477b4f40a48cdbb122e6948dcfc6288f2b45e277acf59f20fefaa532701e86cf05fdbd3c2ae7ed787e51d00dd5a10d19ac83f4ccbf650d59aea WHIRLPOOL 96c8ed936dce15215a111c1a043c88f180c41dddbc6e05d5df140eefc4866118779c95855a5183441d75f5fd8200b3eb436906675104cbf9581269c432c748f4
 MISC ChangeLog-2009 109242 SHA256 76119bd85f64b74b4f8129911eef944e8f1baa3ae38bbfb65bcd6197a6f58c88 SHA512 200b2a1f8d66bc4461de84a5b675ae9bdc1fd38ffea339cdc69afdb613d7a6d6ffe29175fba62b10c4f9d95e050035933f59e21172bf9c545d7a70137c8d04f4 WHIRLPOOL 1c084a461e803c1a6627986cb2444cd7a23743f409df5bb1ca5f55d1e7c3106670cfc2cd4f875a479e0c75513b7937ee35b591b4016b715f7fa45209e098cece
 MISC metadata.xml 803 SHA256 11ce7d6b3d1a4b32ac268d791e3e9fc1a47e579fb0587f87caf4c064c1abc355 SHA512 73fee10d52b8012ee64bdb789d0ecc0368c418822ec823ad22c1eac3c7c4af37c561a58599db68a6638059624e6f37e7d3cb5f3fd363255a372a9614c1deaf75 WHIRLPOOL f26245d7f8c9bf8c653730e1e832781289e06e43dc6cbc1efc422b6e8e3f7342e5a94f8cb731b4c2193c40af6087048da0ca384e4f13e697f86098296936e2e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU8hEGXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO2bsP/2zNR+H0JzuAJp3o2xkWxerw
-57VWF0tntGoE496NUaBjh3ywjkWOqmXl+af0H4sAX/x+4Ce3cTiy1x74s4/Puc0h
-G2E72YvNCnpu5ikk4I4uCnUzChtQpuQiBqDDG3omca4ZGsxFW50DXwt2D5WctllG
-R2NaXU9zTTUbUbHW8pMbFqVfUzidvb0/ptisrBuFX93jCPxhaN/VZwGKlz3rT5V8
-73cj9hXxy4FzBbSF4r8wC9SySN6x1Q/zIVwf8dXEAw+xjrJQT4csbNoyXaeCeL8V
-1vftps2LhiH2ZCiupDsu3F4v/stT60VBAgnPXHCko7/OOQehhxFKS0J4g12SudI3
-DXpPHjrxqPkBiROLqXPfrerzvBRIrJRqV+zEPzh6Iyps60jYeBCiGLPTYkRPhIlk
-DIlDNxjcdw+SUGYvYba6qc5OrxY1fLFq68Moe9vXJKQ/1Sm2nT5E6NnUIo/vaAfa
-dpIxdGGMgpSPmefLmRTHeKLwCDUoKjuQ2hBjwdy4/sJ9EjHVTsh0EwgXLVDvZIKC
-lLqQu1z5GfQ5kbvMZ0KQanGk/zFlqL+E+VU9ZQ/w8Bv8+OXzxXzegHyctewnnuEN
-JZBtoezTJSZOQyjNVvFO2pAWS0TrwnWrDyGJiUtaNUqD8NFPZO6XRAIg34LtmLm6
-3KH+sps3kpX4tWve2KVn
-=qdWA
+iQIcBAEBCAAGBQJU9SM3AAoJEJIMDbyqvv1VzukP/3G6N33SMtW/RbpVen5OKEEe
+j6/b4tfHsq+XfIhre1hE7ZLSIIy5c/C1QL98+NJdMb/WVFu6/VS+z5YYxZjF5uyo
+lsV4zZjaqVsmTl4g4LB1686qgEY7zOfHWgIU7oYGPuNT87eVR9YVpZpR44xQLiL4
+1fSbJlsNUHduJxmWMgbytMBm4ylcvUvD8BNTtYPRPj4pHvN0QlvGbM9MLLPB8j9q
+Tni1AJOCmiYaYw49Igzygd31YV/JM3QnkPVtDcBWQ6Zq6HIT/i5kpmNdHl9BN6/z
+cI0O94iuwG99xPwcKmie/1e9XzDfzGgOwSnd9hBmjariPw+0clF/1rKku/B6y/sy
+YVgvvYtMJE2vgocznYtFz/8RbJIWaH+1KMegWgxZ9gAuNNI3RyF2xQEoHJsfdjXy
+7ixIJsoishYOrOkPw9wLtLgoX238wpo74InOtddR+Lx3cRcsktqT/tLHFxr7CXBg
+LkHAv3HXVSVfCnneSn7EvTliv7sUUM07osQuuUq9p3FkG1qXZQ1nZmxUo+E5o34t
+BpFWoHSBupSTU6G/rdIBy8NYOqnbwHTmfuUka22b/CLMZ9xeMOugVl8QEZNq8t0P
+pQFV+FwgwDHKMJazie3O0SKE+fgoqZsY7x4BA943Tp9BHwwkRY73B16IqZmTTs3Q
+s97ImF+SRTkkTTc3ucIr
+=uSoc
 -----END PGP SIGNATURE-----
