@@ -1,6 +1,9 @@
 # ChangeLog for x11-base/xorg-drivers
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.128 2015/02/24 08:37:41 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.129 2015/03/03 10:56:50 dlan Exp $
+
+  03 Mar 2015; Yixun Lan <dlan@gentoo.org> xorg-drivers-1.17.ebuild:
+  add arm64 support, tested on A53 board
 
   24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> xorg-drivers-1.16.ebuild:
   Stable for alpha, wrt bug #530652
